<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.chriscalderonh.andersonscodechallenge.searchacronym.ui.model.VmSearch" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSearchLabel"
            style="@style/Font_24sp_Primary_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_acronym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/acronyms_or_abbreviations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSearchLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:visibility="@{viewModel.isEmptySearch ? View.GONE : View.VISIBLE}"
            app:data="@{viewModel.longforms}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSearch"
            tools:listitem="@layout/view_longform_item" />

        <TextView
            android:id="@+id/tvEmptySearchMsg"
            style="@style/Font_18sp_Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/no_information_found"
            android:visibility="@{viewModel.isEmptySearch ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSearch" />

        <com.chriscalderonh.andersonscodechallenge.common.ui.customviews.LoadingView
            android:id="@+id/lvSearchLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

        <com.chriscalderonh.andersonscodechallenge.common.ui.customviews.ErrorView
            android:id="@+id/evSearchError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}"
            app:errorMsg="@{viewModel.errorMsg}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>